--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,111 +1,175 @@
 
+/*
+Description: Site Soledad
+Nom de l'auteur: Olivier Romer et François Massiot
+Contact : alexandrebouttier@gmail.com
+Url:https://github.com/FM35/depot-challenge3bis.git
+https://github.com/roro35140/challenge3.git
+*/
 
 
+/* --- TABLE DES MATIERES
+. Import fonts
+. FOOTER
+	-INSTAGRAM
+	- SOCIAL 
+	- LOGO COPYRIGTH 
+		- LOGO 
+		- COPYRIGHT
+		- UPFROMFOOTER
+
+--- */
+
+/*---------------Import fonts---------------*/   
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
 
-body, html {
-    margin: 0;
-    padding: 0;
- }
+/*--------------- FOOTER ---------------*/   
+.jumbotron{
+	background-color:rgb(33,33,33);
+	text-align:center;
+	width:1440px;
+	margin:0px;
+	padding:0px;
 
-
-						/*---------------Menu - Barre de naviguation---------------*/   
-
-                                 
-.menu {
-	height: 80px;
-	background: black;
-	width: 100%
-}    
-
-.navbar {
-	
-	margin: 0 auto;
-	display: inline;
-	text-align: center;
-	}
-
-
-.nav-links {
-	color: grey;
-	text-transform: uppercase;
-	text-decoration: none;
-	font-family: 'Josefin+Sans', sans-serif;
-	font-size: 20px;
-	padding: 0 20px;
-	
-	
 }
-
-.nav-links-current {
-	color: white;
-	text-transform: uppercase;
-	text-decoration: none;
-	font-family: 'Josefin+Sans' sans-serif;
-	font-size: 20px;
-	padding: 0 20px;
-	
-	
-}
-
-.titre-header {
-	color: black;
-	background-color: yellow;
-	text-align: center;
-	height: 370px;
-}
-
-.photo-header {
+	/*---------------INSTAGRAM---------------*/   
+.instagram{
 	width: 100%;
-	margin-top: 0px;
+	margin:0px;
+	padding:0px;	
+}
+.imageonInstag{
+	list-style:none;
+	display:flex;
+	
+	
+}
+.jumbotron .Instagram .imageonInstag {
+	text-align: left;
+	margin:0px;
+	padding:0px;
+}
+
+.imageInstagram {
+	width:180px;
+	height:180px;
+	margin:0px;
+	padding:0px;
+}
+.MeonInstag{
+	position:absolute;
+	top:30px;
+	left:700px;
+	background-color: white;
+	font-family:Monaco,Menlo,Consolas,"Courrier New",monospace;
+	font-size: 20px;
+	line-height:40px;
+
+	padding:20px;
+	
+	
+	
+}
+	/*------------------SOCIAL--------------*/
+.socialFooter{
+	
+	border-bottom:1px solid #4a4a4a;
+	padding:30px 0 15px;
+	text-align:center;
+}
+.socialFooter ul {
+	display:flex;
+	justify-content: center;
+
+}
+.socialFooter ul li {
+	list-style:none;
+	margin-right: 29px;
+}
+
+ul.footer-socials li:last-child {
+    margin-right: 0;
+}
+
+.socialFooter ul li a:hover i{
+	color:#999;
+	cursor:pointer;
+	transition:0.3s;
+	text-decoration:none;
+	border-color:white;
+	background-color:white;
 }
 
 
+.socialFooter ul li a i  {
+	border: 1px solid #999;
+    border-radius: 50%;
+    color: #999;
+    font-size: 14px;
+    height: 32px;
+	width: 32px;
+	line-height: 30px;
+}
 
+.socialFooter ul li  span {
+	font-weight:bold;
+	color:#999;
+	font-size:14px;
+	letter-spacing:1px;
+	margin-left:14px;
+	font-family:"Playfair Display",serif;
+}
+.socialFooter li a:hover span {
+    color:white;
+}
+	/*------------------LOGO COPYRIGHT--------------*/
 
+/*------------------LOGO --------------*/
+.logoFooter{
+	margin:35px 0 40px;
+	line-height: 60px;
+	width:100%;
+}
+/*------------------COPYRIGHT--------------*/
+.copyrightFooter{
 
+	color: rgb(153,153,153);
+	font-family:"Lato",sans-serif;
+	font-size:14px;
+	font-style:italic;
+	font-weight:400;
 
+}
+/*------------------UPFROMFOOTER--------------*/
+.upfromFooter{
+	margin-top:30px;
 
+}
+.upfromFooter p{
+	color: rgb(153, 153, 153);
+    font-family : "Raleway",sans-serif;
+    font-size: 12px;
+	font-weight: 700;
+}
 
-
-
-
-  	
-  
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.upfromFooter i{
+	color: rgb(153, 153, 153);
+    font-size: 12px;
+	font-weight: 700;
+}
+.upfromFooter a:hover i{
+	color:white;
+	cursor:pointer;
+	transition:0.3s;
+	text-decoration:none;
+}
+.upfromFooter a:hover p{
+	color:white;
+	cursor:pointer;
+	transition:0.3s;
+	text-decoration:none;
 }
 
