--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -31,8 +31,8 @@ https://github.com/roro35140/challenge3.git
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
 /*---------------SECTION ASIDE---------------*/
-section .container-fluid{
-margin:50px 30px; 
+section .container{
+margin:50px auto; 
 }
 
 
@@ -63,6 +63,7 @@ margin:50px 30px;
 .imageabout,.imageabout img{
 	height:245px;
 	
+	
 
 }
 .aboutme p{
@@ -84,6 +85,7 @@ margin:50px 30px;
 }
 .recentpost .row{
 	display:flex;
+	margin-left:20px;
 	margin-bottom:30px;
 
 	
@@ -136,7 +138,7 @@ margin:50px 30px;
 .jumbotron{
 	background-color:rgb(33,33,33);
 	text-align:center;
-	width:1440px;
+	width:100%;
 	margin:0px;
 	padding:0px;
 	position:relative;
@@ -161,7 +163,7 @@ margin:50px 30px;
 }
 
 .imageInstagram {
-	width:180px;
+	width:100%;
 	height:180px;
 	margin:0px;
 	padding:0px;
