--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -9,6 +9,7 @@ https://github.com/roro35140/challenge3.git
 
 
 /* --- TABLE DES MATIERES
+
 . Import fonts
 - SECTION-ASIDE
 	-ABOUTME
@@ -24,7 +25,7 @@ https://github.com/roro35140/challenge3.git
 		- UPFROMFOOTER
 
 --- */
-
+/*debut du codage olivier */
 /*---------------Import fonts---------------*/   
 @import url('https://fonts.googleapis.com/css?family=Lato:400,400i');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:700');
@@ -282,3 +283,4 @@ ul.footer-socials li:last-child {
 	text-decoration:none;
 }
 
+/*fin codage olivier */
