--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -52,13 +52,13 @@ html {
 
 .navbar {
     width: 100%;
+    height: 60px;
     margin: 0px;
     border-radius: 0px;
-    padding-top: 12px;
-    padding-left: 100px;
-    position: fixed;
+    padding-top: 16px;
+    padding-left: 300px;
+    padding-bottom: 0px;
     background-color: black;
-    z-index: 1;
 }
 
 .nav-links {
@@ -66,7 +66,7 @@ html {
     text-transform: uppercase;
     text-decoration: none;
     font-family: "Times New Roman", Times, serif;
-    font-size: 13px;
+    font-size: 14px;
     padding: 0 20px;
 }
 
@@ -75,11 +75,10 @@ html {
     text-transform: uppercase;
     text-decoration: none;
     font-family: "Times New Roman", Times, serif;
-    font-size: 13px;
+    font-size: 14px;
     padding: 0 20px;
 }
 
-/*---------------Fin Menu - Barre de naviguation---------------------------------*/
 
 a:hover {
     color: #ffffff;
@@ -92,122 +91,103 @@ a {
 
 }
 
-.titre-header {
+/*---------------Menu - fin barre de naviguation-------------------------*/
+
+/*---------------Logo HEADER --------------------------------------------*/
+.container-logo-header {
+    margin: 0 auto;
+    padding: 0;
     color: black;
     background-color: #f5f5f5;
     text-align: center;
     height: 228px;
+
 }
 
-h1 {
-    font-size: 70px;
-    font-family: "Lato", serif;
-    text-align: center;
-    color: black;
-}
-
-h5 {
-    font-size: 21px;
-    font-family: 'PT Serif', serif;
-    text-align: center;
-    color: black;
-}
-
-.container-fluid {
-    width: 100%;
-    max-height: 560px;
-    background-color: none;
-}
-
-.row {
-    width: 100% height: 560%
-}
-
-.photo-header {
-    max-width: 100%;
-    height: 560px;
-    display: center;
-}
-
-.img-responsive {
-    width: 100%;
-    height: 560px;
-}
-
-.no-padding {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.separation {
-    width: 100%;
-    height: 60px;
-    background-color: red;
-}
-
-
-/*---------------Début de la div articles avec photos---------------*/
-
-.container2 {
-    width: 1170px;
-    height: 3607px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: none;
-}
-
-.row {
-    margin-bottom: 0px;
-}
-
-.post {
-    border-style: none;
-    border-width: 1px;
-    border-color: none;
-    padding: 6rem;
-}
-
-.separation2 {
-    width: 100%;
-    height: 2px;
-}
-
-.img-responsive2 {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0;
-    padding: 0;
-}
 
 h2 {
-    font-size: 14.4px;
-    font-family: "Lato";
-    text-align: center;
-    color: red;
+     font-family: 'PT Serif', serif;
+    font-size: 14px;
+    font-style: italic;
+    
 }
 
-h3 {
-    font-size: 20px;
-    font-family: "Player display";
-    text-align: center;
-    color: none;
+.logo {
+    margin: 0 auto;
+    padding-top: 60px;
 }
 
-h4 {
-    font-size: 17px;
-    font-family: "Lato";
-    text-align: center;
-    color: none;
+/*---------------Fin - Logo HEADER --------------------------------------------*/
+
+
+.article{
+    background-image: url("../images/mom-daughter1.jpg");
+    background-size: cover;
+    max-width: 100%;
+    min-height: 560px;
+    margin-bottom: 50px;
+    display: flex;
+    padding-top: 350px;
+    padding-bottom: 200px;
+    padding-right: 60px;
+    padding-left: 750px;
+ 
+
 }
 
-.separation2 {
-    height: 2px;
-    width: 60px;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: red;
+.post{
+    height: 150px;
+    width: 480px;
+    background-color:#ffffff;
+    border-style: double;
+    border-color: #717981;
+    text-align: center;
+    padding-top: 50px;
+    margin:center;
 }
+.post p{
+    color:red;
+    font-size: 13px;
+    margin:20px 0px 0px 170px;
+}
+
+.post p a{
+    padding: center;
+    margin:center;
+    color:red;
+}
+
+.post h2{
+    margin:0px 0px 5px 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*---------------SECTION ASIDE-----Début Olivier----------*/
