--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -119,7 +119,7 @@ h2 {
 
 /*---------------Fin - Logo HEADER --------------------------------------------*/
 
-
+/*---------------Début photos header --------------------------------------------*/
 .article{
     background-image: url("../images/mom-daughter1.jpg");
     background-size: cover;
@@ -163,6 +163,78 @@ h2 {
 
 
 
+/*---------------Début des articles --------------------------------------------*/
+
+.container2 {
+    width: 1170px;
+    height: 3607px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: none;
+    padding: 0;
+}
+
+.row {
+    margin-bottom: 0px;
+}
+
+.post {
+    border-style: none;
+    border-width: 1px;
+    border-color: none;
+    padding: 6rem;
+}
+
+.separation2 {
+    width: 100%;
+    height: 2px;
+}
+
+.img-responsive2 {
+    display: block;
+    max-width: 100%;
+    width: 570px;
+    height: 380px;
+    background-position:center;
+    margin:0;
+    padding:0;
+} 
+
+.col-md-6{ 
+    width: 570px;
+    position: relative;
+    padding-right: 15px;
+    padding-left: 15px; 
+} 
+
+h2 a {
+    font-size: 14.4px;
+    font-family: "Lato";
+    text-align: center;
+    color: red;
+}
+
+h3 a {
+    font-size: 20px;
+    font-family: "Player display";
+    text-align: center;
+    color: none;
+}
+
+h4 {
+    font-size: 17px;
+    font-family: "Lato";
+    text-align: center;
+    color: none;
+}
+
+.separation2 {
+    height: 2px;
+    width: 60px;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: red;
+}
 
 
 
