--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -9,6 +9,7 @@ https://github.com/roro35140/challenge3.git
 /* --- TABLE DES MATIERES
 
 . Import fonts
+-PAGINATION
 - SECTION-ASIDE
 	-ABOUTME
 	-RECENTPOST
@@ -255,14 +256,44 @@ h4 {
 
 
 
+/*---------------pagination debut olivier-------------*/
+
+.row {
+  text-align:center;
+}
+.pagination a{
+   margin-right:10px;
+   
+}
+.pagination li a{
+    color: #888;
+     font-family : "Playfair Display",serif;
+     font-size: 13px;
+   
+    vertical-align: baseline
+    letter-spacing: 1px;
+    word-spacing: 0px;
+   font-style: normal;
+    font-variant: normal;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    text-indent: 0px;
+}
+
+.pagination li a:hover{
+  font-weight:700;
+  background-color:  #ffffff;
+  border :1px solid  rgb(49, 49, 49);
+}
+.pagination .active{
+    background-color: rgb(166,5,5);
+    color:#ffffff;
+}
 
 
 
-
-
-
-
-/*---------------SECTION ASIDE-----Début Olivier----------*/
+/*---------------SECTION ASIDE-------------*/
 
 section .container {
     margin: 50px auto;
